--- a/nav.less
+++ b/nav.less
@@ -8,7 +8,7 @@ nav {
   margin-left: 1rem;
 }
 
-@media (max-width: 900px) {
+@media @narrow {
   nav {
     position: relative;
   }
