--- a/variables.less
+++ b/variables.less
@@ -2,7 +2,11 @@
 @textColor: #333;
 @navWidth: 270px;
 
-@narrow:  ~'(max-width: 529px)';
+@narrow:  ~'(max-width: 800px)';
+
+@headerGreen: hsl(152, 100%, 45%);
+@linkGreen: hsl(152, 100%, 40%);
+@linkVisitedGreen: hsl(152, 82%, 20%);
 
 @museo: museo-sans, "Helvetica Neue", Helvetica, Arial, sans-serif;
 @ingra: ingra, "Helvetica Neue", Helvetica, Arial, sans-serif;
